Sorgenti GARI relativi al rilascio del 25-06-2025/Kubernetes/bundles-gari-master/bundles-gari-master/on-the-fly-containers/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-nginx
  labels:
    app: tom-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tom-nginx
  template:
    metadata:
      labels:
        app: tom-nginx
    spec:
      containers:
        - name: tom-nginx
          image: nginx:latest
          volumeMounts:
            - name: nfs
              mountPath: "/usr/share/nginx/html"
              readOnly: true
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: nfs-umbria-dev
