Sorgenti GARI relativi al rilascio del 25-06-2025/Kubernetes/bundles-gari-master/bundles-gari-master/on-the-fly-containers/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tom-nginx
spec:
  selector:
    app: tom-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
