Sorgenti GARI relativi al rilascio del 25-06-2025/Kubernetes/bundles-gari-master/bundles-gari-master/on-the-fly-containers/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tom-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-body-size: 5m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1000"
spec:
  rules:
  - host: umbria-dev.fe.abacogroup.eu
    http:
      paths: 
      - path: /tom-nginx(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tom-nginx
            port:
              number: 80
